--- a/popup.html
+++ b/popup.html
@@ -3,73 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Question Answering</title>
+    <title>Smart(er) Revise</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            width: 300px;
-            height: 200px;
-            box-sizing: border-box;
-            background-color: #f5f5f5;
+            background-color: #f0f2f5;
             color: #333;
         }
+
         .container {
+            width: 400px;
             padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff;
+            border-radius: 8px;
+            margin: 20px auto;
         }
-        .status {
-            font-size: 14px;
-            color: #555;
-            margin-bottom: 15px;
-        }
-        .answer {
-            font-size: 16px;
-            font-weight: bold;
-            color: #007bff;
-            margin-top: 10px;
-        }
-        .loading {
+
+        h1 {
+            font-size: 1.6em;
+            color: #444;
             text-align: center;
-            margin-top: 50px;
+            margin-bottom: 20px;
         }
-        .spinner {
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-radius: 50%;
-            border-top: 4px solid #007bff;
-            width: 24px;
-            height: 24px;
-            animation: spin 1s linear infinite;
+
+        #status {
+            font-size: 1.1em;
+            color: #007bff;
+            text-align: center;
+            margin-bottom: 20px;
         }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+
+        #answer {
+            width: 100%;
+            height: 150px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            background-color: #fafafa;
+            resize: none;
+            overflow: auto;
+            font-size: 1em;
+            color: #333;
         }
-        button {
+
+        #scrapeButton, #copyButton {
             display: block;
             width: 100%;
             padding: 10px;
-            margin-top: 10px;
+            border: none;
+            border-radius: 4px;
             background-color: #007bff;
             color: #fff;
-            border: none;
-            border-radius: 5px;
+            font-size: 1.1em;
             cursor: pointer;
+            margin-top: 10px;
         }
-        button:hover {
+
+        #scrapeButton:hover, #copyButton:hover {
             background-color: #0056b3;
+        }
+
+        #error {
+            color: #dc3545;
+            font-size: 1em;
+            text-align: center;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div id="status" class="status">Click "Scrape Answer" to start.</div>
-        <div id="answer" class="answer"></div>
-        <div id="loading" class="loading" style="display: none;">
-            <div class="spinner"></div>
-        </div>
-        <button id="scrapeBtn">Scrape Answer</button>
+        <h1>Smart Revise Assistant</h1>
+        <button id="scrapeButton">Scrape and Answer</button>
+        <div id="status">Press "Scrape and Answer" to get started.</div>
+        <textarea id="answer" placeholder="The answer will be displayed here..." readonly></textarea>
+        <button id="copyButton">Copy Answer</button>
+        <div id="error"></div>
     </div>
+
     <script src="popup.js"></script>
 </body>
 </html>
